# mcp-zenodo

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_data_type.py
client/: client.py  discovery.py  roots.py
mcp-zenodo-fastapi/: .env.example  README.md  setup.sh  test_tools.py
mcp-zenodo-fastapi/models/: __init__.py
mcp-zenodo-fastapi/server/: config.py  prompt.py  server.py  zenodo_client.py
mcp-zenodo-fastapi/server/tools/: __init__.py  search_tool.py  summarize_tool.py
mcp-zenodo-fastapi/server/transport/: routes.py
mcp-zenodo-fastapi/tests/: test_client.py
mcp_api/: README.md
mcp_api/client/: __init__.py  sampling.py
mcp_api/models/: response.py
mcp_api/server/: __init__.py
mcp_api/server/tools/: embed_tool.py  keywords_tool.py  related_records_tool.py
mcp_api/user/: __init__.py
mcp_sdk_core/: README.md
mcp_sdk_core/client/: client.py
mcp_sdk_core/server/: server.py  zenodo_client.py
models/: request.py
server/: main.py  resources.py  server.py
server/tools/: citation_tool.py  compare_tool.py  data_type_tool.py  download_tool.py  files_tool.py  metadata_tool.py  registry.py  tools.py
server/transport/: __init__.py
user/: user_app.py
